# NestRS

./: .env.development  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  NOTES.md  PUNCHLIST-1.0.md  README.md  ROADMAP.md  SECURITY.md  db.just  test.just
apps/api/: Cargo.toml  schema.graphql
apps/api/src/: app.rs  auth.rs  lib.rs  main.rs
apps/api/src/authn/: guard.rs  strategy.rs
apps/api/src/authz/: ability.rs  bridge.rs  guard.rs  mod.rs  module.rs
apps/api/src/orgs/: controller.rs  entity.rs  mod.rs  module.rs  resolver.rs  service.rs
apps/api/src/users/: controller.rs  entity.rs  gateway.rs  mod.rs  module.rs  resolver.rs  service.rs
apps/api/tests/: e2e.rs
apps/auth/: Cargo.toml
apps/auth/src/: app.rs  lib.rs  main.rs
apps/auth/src/oauth/: controller.rs  mod.rs  module.rs  service.rs  strategy.rs
apps/auth/tests/: e2e.rs
apps/chat/: Cargo.toml
apps/chat/src/: app.rs  lib.rs  main.rs  module.rs
apps/chat/src/chat/: dto.rs  gateway.rs  guard.rs  mod.rs  module.rs  service.rs
apps/chat/src/notify/: gateway.rs  module.rs
apps/chat/tests/: e2e.rs
apps/db/: Cargo.toml
apps/db/src/: lib.rs  seed.rs
apps/db/src/migrations/: m20260526_000001_create_user.rs  m20260526_000002_add_user_role.rs  migrator.rs  mod.rs
apps/db/src/seed/: mod.rs  runner.rs
apps/db/tests/: e2e.rs
apps/mcp/: Cargo.toml
apps/mcp/src/: app.rs  lib.rs  main.rs  module.rs
apps/mcp/src/weather/: module.rs  service.rs  tool.rs
apps/mcp/tests/: e2e.rs
apps/platform-api/: Cargo.toml
apps/platform-api/src/: lib.rs  main.rs  module.rs
apps/platform-api/tests/: e2e.rs
apps/platform-auth/: Cargo.toml
apps/platform-auth/src/: lib.rs  main.rs  module.rs
apps/platform-auth/tests/: e2e.rs
apps/platform-worker/: Cargo.toml
apps/platform-worker/src/: lib.rs  main.rs  module.rs
apps/platform-worker/tests/: e2e.rs
apps/publish-assistant/: Cargo.toml
apps/publish-assistant/src/: lib.rs  main.rs  module.rs
apps/publish-assistant/src/weather/: dto.rs  mod.rs  service.rs
apps/publish-assistant/tests/: e2e.rs
apps/publish-auth/: Cargo.toml
apps/publish-auth/src/: lib.rs  main.rs  module.rs
apps/publish-auth/tests/: e2e.rs
apps/publish-live/: Cargo.toml
apps/publish-live/src/: lib.rs  main.rs  module.rs
apps/publish-live/src/chat/: service.rs
apps/publish-live/tests/: e2e.rs
apps/worker/: Cargo.toml
apps/worker/src/: app.rs  main.rs
apps/worker/tests/: e2e.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/authn/: mod.rs  module.rs
crates/domain/src/authz/: guard.rs  mod.rs  module.rs
crates/domain/src/identity/: claims.rs  mod.rs
crates/domain/src/oauth/: http.rs  mod.rs  module.rs  scope.rs  service.rs  strategy.rs
crates/domain/src/orgs/: entity.rs  error.rs  mod.rs  module.rs  resolver.rs  service.rs
crates/domain/src/users/: entity.rs  error.rs  http.rs  mod.rs  module.rs  resolver.rs  service.rs
crates/domain/tests/: domain.rs
crates/domain/tests/authz/: mod.rs
crates/domain/tests/oauth/: scope.rs  service.rs
crates/domain/tests/orgs/: service.rs
crates/domain/tests/users/: service.rs
crates/features/: Cargo.toml
crates/features/src/: lib.rs
crates/features/src/audio/: command.rs  dto.rs  mod.rs  module.rs  service.rs
crates/features/tests/: domain.rs  e2e.rs
crates/nest-rs-authn/: Cargo.toml  README.md
crates/nest-rs-authn/src/: error.rs  lib.rs
crates/nest-rs-authz/: Cargo.toml  README.md
crates/nest-rs-authz/src/: ability.rs  action.rs  builder.rs  context.rs  factory.rs  lib.rs  mask.rs  mcp.rs  predicate.rs  subject.rs  wire_mask.rs
crates/nest-rs-authz/tests/: authz.rs
crates/nest-rs-cli/: Cargo.toml  README.md
crates/nest-rs-cli/src/: cli.rs  error.rs  naming.rs
crates/nest-rs-cli/tests/: cli.rs
crates/nest-rs-codegen/: Cargo.toml  README.md
crates/nest-rs-codegen/src/: args.rs  attrs.rs  casing.rs  crud.rs  inject.rs  lib.rs  ty.rs
crates/nest-rs-config/: Cargo.toml  README.md
crates/nest-rs-config-macros/: Cargo.toml  README.md
crates/nest-rs-config-macros/src/: config.rs  lib.rs
crates/nest-rs-config/src/: config.rs  dotenv.rs  environment.rs  error.rs  lib.rs  module.rs  service.rs  source.rs
crates/nest-rs-core/: Cargo.toml  README.md
crates/nest-rs-core/src/: access.rs  app.rs  container.rs  discoverable.rs  discovery.rs  job.rs  layer.rs  layer_chain.rs  lib.rs  lifecycle.rs  metadata.rs  module.rs  request_scope.rs  transport.rs
crates/nest-rs-core/tests/: core.rs
crates/nest-rs-database/: Cargo.toml  README.md
crates/nest-rs-database/src/: executor.rs  lib.rs
crates/nest-rs-events/: Cargo.toml  README.md
crates/nest-rs-events/src/: bus.rs  inventory.rs  lib.rs  meta.rs  module.rs
crates/nest-rs-events/tests/: bus.rs
crates/nest-rs-exception-filters/: Cargo.toml  README.md
crates/nest-rs-exception-filters/src/: builder.rs  erased.rs  exception.rs  lib.rs  registry.rs
crates/nest-rs-filters/: Cargo.toml  README.md
crates/nest-rs-filters/src/: builder.rs  ext.rs  filter.rs  lib.rs  registry.rs
crates/nest-rs-graphql/: Cargo.toml  README.md
crates/nest-rs-graphql-macros/: Cargo.toml  README.md
crates/nest-rs-graphql-macros/src/: crud.rs  dataloader.rs  lib.rs  resolver.rs
crates/nest-rs-graphql/src/: config.rs  context.rs  guard.rs  lib.rs  loader.rs  module.rs  resolver.rs  scope.rs
crates/nest-rs-graphql/tests/: context.rs  guard.rs  layer_pool.rs  limits.rs  resolver.rs
crates/nest-rs-guards/: Cargo.toml  README.md
crates/nest-rs-guards/src/: builder.rs  cross_transport.rs  denial.rs  endpoint.rs  guard.rs  integration.rs  layer_chain.rs  lib.rs  prelude.rs  registry.rs
demo/: .env  .env.development  .env.example  Cargo.toml  Dockerfile
demo/apps/api/: Cargo.toml  openapi.json  schema.graphql
demo/apps/assistant/: Cargo.toml
demo/apps/auth/: Cargo.toml
demo/apps/live/: Cargo.toml
demo/apps/worker/: Cargo.toml
demo/crates/features/: Cargo.toml
demo/crates/migrations/: Cargo.toml
demo/crates/seed/: Cargo.toml
(+1261 files in other folders)
