[workspace]
resolver = "2"
members = [
    "crates/*",
    "apps/*",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
rust-version = "1.95"
repository = "https://github.com/NestRS/NestRS"
homepage = "https://nestrs.dev"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry stack. SDK pinned with rt-tokio so batch exporters run on our
# async runtime; OTLP exporter uses HTTP/protobuf over reqwest so we reuse the
# rustls toolchain already in the workspace (no tonic/openssl).
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
# Defaults give us http-proto + reqwest-blocking-client + trace/metrics/logs.
# The batch processors run their HTTP exports from a dedicated thread that is
# *not* a Tokio reactor, so the blocking reqwest client is the right pick —
# the upstream-recommended pairing for batch exporters.
opentelemetry-otlp = "0.32"
opentelemetry-http = "0.32"
opentelemetry-semantic-conventions = { version = "0.32", features = ["semconv_experimental"] }
opentelemetry-appender-tracing = "0.32"
tracing-opentelemetry = "0.33"

# Errors
thiserror = "2"
anyhow = "1"

# JWT — HS/RS/ES algorithms for token signing and verification.
# `rust_crypto` selects the pure-Rust backend (no aws-lc-rs C dependency), matching
# the workspace's rustls posture; jsonwebtoken 10 requires picking one explicitly.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
# OAuth2 Authorization Code flow (+ PKCE); the `reqwest` backend below drives its
# token exchange. The per-provider strategy lives in the app.
oauth2 = "5"
# HTTP Basic decoding for OAuth2 client authentication (`Authorization: Basic`).
# The de-facto standard base64 crate, already in the tree transitively via
# oauth2/jsonwebtoken; pulled up as a direct dep for the `basic_credentials` helper.
# NOTE: last release 0.22.1 (2024) is past the 12-month freshness bar, but the
# crate is effectively feature-complete and ubiquitous — flagged, not silent.
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# HTTP. The `anyhow` feature gives `poem::Error: From<anyhow::Error>` (→ 500), so a
# handler can `?` a service's `anyhow::Result` straight through — no hand-written
# error→response mapping in the app. `rustls` terminates TLS at the transport
# (`HttpTransport::tls`) with no OpenSSL system dependency, keeping the
# single-static-binary promise.
poem = { version = "3", features = ["tower-compat", "anyhow", "rustls"] }

# Response-body plumbing for the access log: wrap poem's body stream in a byte
# counter so the access event reports the exact size sent (poem stamps
# Content-Length past the interceptor). `bytes::Bytes` is the chunk type,
# `futures-core` the `Stream` trait the wrapper implements.
bytes = "1"
futures-core = "0.3"
# `StreamExt`/`SinkExt` for driving poem's `WebSocketStream` (a `Stream` + `Sink`)
# in the WebSocket gateway connection loop (`nest-rs-ws`).
futures-util = "0.3"

# Async traits (needed for `dyn Trait` containing async methods on Rust 1.75)
async-trait = "0.1"

# Synchronisation primitives. parking_lot's locks have no poisoning, so the
# framework's hot-path locks need no `.unwrap()`/`.expect()` (honouring the
# "no unwrap on production paths" rule) and are smaller and faster than std's.
# Already in the tree transitively (tokio/poem); pulled up as a direct dep so
# every framework crate shares one lock primitive.
parking_lot = "0.12"

# GraphQL. `dataloader` gives us async-graphql's batching loader, surfaced via
# the `#[dataloader]` decorator to kill field-resolver N+1s.
async-graphql = { version = "7", features = ["dataloader"] }
async-graphql-poem = "7"
# Link-time registry: each `#[resolver]` submits its query/mutation objects so
# the schema composes itself at boot with no central list.
inventory = "0.3"

# Password hashing (Argon2id). Used by `nest-rs-authn::password` for credential storage.
argon2 = "0.5"

# Input validation
validator = { version = "0.20", features = ["derive"] }

# UUIDs. `serde` so entity rows (whose ids are UUIDs) serialize for the authz
# response masker and JSON responses.
uuid = { version = "1", features = ["v7", "serde"] }

# Fake data for the shared-database seeder's factories (names, emails, company
# names). Pulls `rand` transitively, so `.fake()` needs no direct rand dep.
fake = "5"

# ORM. SeaORM 2.0 — the latest published is the `2.0.0-rc` line (the 2.0.0 final
# is not yet on crates.io, so the pre-release is pinned explicitly). Postgres
# over the rustls toolchain already used across the workspace.
sea-orm = { version = "2.0.0-rc.38", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid"] }
# Migration runner + schema builder. Same release line as sea-orm; the bundled
# `cli` feature gives the `migrate` binary its up/down/fresh/status subcommands.
sea-orm-migration = { version = "2.0.0-rc.38", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# HTTP client (rustls so we avoid an OpenSSL system dep)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# MCP server SDK + JSON Schema derive used by tool parameters.
# schemars must match rmcp's re-exported version so the derive resolves to the
# same trait rmcp::handler::server::wrapper::Parameters expects.
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
# `uuid1` adds the `JsonSchema` impl for `uuid::Uuid` so UUID-typed DTO fields can
# be documented (and typed at the edge) rather than passed around as strings.
schemars = { version = "1", features = ["uuid1"] }

# Cron expression parsing for #[cron_job(cron = "...")]. croner accepts 5/6/7
# fields (seconds optional), for flexible schedule expressions. chrono is its
# time type; chrono-tz resolves an IANA name for the optional per-job timezone.
croner = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"

# Redis-backed job queues. apalis is the
# background-task framework; apalis-redis is its Redis storage backend. Pinned to
# the 0.7 stable line — 1.0 is still churning through release candidates and does
# not clear our "no pre-release in a foundation dep" bar.
apalis = "0.7"
apalis-redis = "0.7"

# Proc-macro dependencies
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# The product's functional core (not framework — no `nestrs-` prefix). All shared
# business logic, contracts, policy, and the transport adapters that expose
# them — features compose a port + edge modules (HTTP, GraphQL, WS, Queue,
# MCP) that an app picks à la carte. Apps hold only `main.rs` + `module.rs`.
# See CLAUDE.md "Monorepo layout".
features = { path = "crates/features" }

# The product's database concern: schema (migrations) + demo data (seed).
# Product crates like `features` — not framework — and the template a future
# `nestrs new` would emit (the app's repo owns its schema). See CLAUDE.md.
migrations = { path = "crates/migrations" }
seed = { path = "crates/seed" }

# Internal crates (framework).
# Workspace keys, package names, and directory names are all `nest-rs-*` — the
# canonical kebab-case form on crates.io. Each crate's `[lib] name = "nestrs_*"`
# override keeps the Rust import path as `nestrs_*`, so app code still writes
# `use nest_rs::prelude::*;` and proc-macros still emit `::nest_rs_core::*`. See
# project_publishing_strategy memory.
nest-rs-core = { version = "0.2.0", path = "crates/nest-rs-core" }
nest-rs-authn = { version = "0.2.0", path = "crates/nest-rs-authn" }
nest-rs-throttler = { version = "0.2.0", path = "crates/nest-rs-throttler" }
nest-rs-config = { version = "0.2.0", path = "crates/nest-rs-config" }
nest-rs-config-macros = { version = "0.2.0", path = "crates/nest-rs-config-macros" }
nest-rs-events = { version = "0.2.0", path = "crates/nest-rs-events" }
nest-rs-events-macros = { version = "0.2.0", path = "crates/nest-rs-events-macros" }
nest-rs-authz = { version = "0.2.0", path = "crates/nest-rs-authz" }
nest-rs-codegen = { version = "0.2.0", path = "crates/nest-rs-codegen" }
nest-rs-macros = { version = "0.2.0", path = "crates/nest-rs-macros" }
nest-rs-graphql = { version = "0.2.0", path = "crates/nest-rs-graphql" }
nest-rs-graphql-macros = { version = "0.2.0", path = "crates/nest-rs-graphql-macros" }
nest-rs-guards = { version = "0.2.0", path = "crates/nest-rs-guards" }
nest-rs-health = { version = "0.2.0", path = "crates/nest-rs-health" }
nest-rs-health-macros = { version = "0.2.0", path = "crates/nest-rs-health-macros" }
nest-rs-http = { version = "0.2.0", path = "crates/nest-rs-http" }
nest-rs-http-macros = { version = "0.2.0", path = "crates/nest-rs-http-macros" }
nest-rs-mcp = { version = "0.2.0", path = "crates/nest-rs-mcp" }
nest-rs-mcp-macros = { version = "0.2.0", path = "crates/nest-rs-mcp-macros" }
nest-rs-interceptors = { version = "0.2.0", path = "crates/nest-rs-interceptors" }
nest-rs-filters = { version = "0.2.0", path = "crates/nest-rs-filters" }
nest-rs-exception-filters = { version = "0.2.0", path = "crates/nest-rs-exception-filters" }
nest-rs-openapi = { version = "0.2.0", path = "crates/nest-rs-openapi" }
nest-rs-database = { version = "0.2.0", path = "crates/nest-rs-database" }
nest-rs-seaorm = { version = "0.2.0", path = "crates/nest-rs-seaorm" }
nest-rs-pipes = { version = "0.2.0", path = "crates/nest-rs-pipes" }
nest-rs-queue = { version = "0.2.0", path = "crates/nest-rs-queue" }
nest-rs-queue-macros = { version = "0.2.0", path = "crates/nest-rs-queue-macros" }
nest-rs-redis = { version = "0.2.0", path = "crates/nest-rs-redis" }
nest-rs-resource = { version = "0.2.0", path = "crates/nest-rs-resource" }
nest-rs-resource-macros = { version = "0.2.0", path = "crates/nest-rs-resource-macros" }
nest-rs-schedule = { version = "0.2.0", path = "crates/nest-rs-schedule" }
nest-rs-schedule-macros = { version = "0.2.0", path = "crates/nest-rs-schedule-macros" }
nest-rs-server-timing = { version = "0.2.0", path = "crates/nest-rs-server-timing" }
nest-rs-opentelemetry = { version = "0.2.0", path = "crates/nest-rs-opentelemetry" }
nest-rs-testing = { version = "0.2.0", path = "crates/nest-rs-testing" }
nest-rs-worker = { version = "0.2.0", path = "crates/nest-rs-worker" }
nest-rs-ws = { version = "0.2.0", path = "crates/nest-rs-ws" }
nest-rs-ws-macros = { version = "0.2.0", path = "crates/nest-rs-ws-macros" }
nest-rs-cli = { version = "0.2.0", path = "crates/nest-rs-cli" }

# Lints opted into by the apps (via `[lints] workspace = true`). Config literals
# always close with `..Default::default()` — the house convention that keeps an
# import site forward-compatible as an options struct gains fields — so the
# `needless_update` lint (which fires when every field happens to be specified
# today) is deliberately silenced for that deliberate style.
[workspace.lints.clippy]
needless_update = "allow"

# Release: smallest, fastest binary. Compile time is not a concern here.
[profile.release]
opt-level = 3       # max performance (the release default; explicit for clarity)
lto = "fat"         # whole-program optimisation: best cross-crate dead-code elimination
codegen-units = 1   # a single unit gives the optimiser the most to work with
strip = true        # drop symbols from the final binary (~18 MB -> ~15 MB)

# Dev: fastest possible iterative compile. opt-level = 0 and incremental = true
# are already the defaults; the win here is dropping full debuginfo while keeping
# file:line in backtraces, which speeds up both codegen and linking.
[profile.dev]
debug = "line-tables-only"
