[workspace]
resolver = "2"
# The product workspace — the **Publish** demo. This is a *consumer* of the
# framework: the runnable apps plus the product crates (`features` /
# `migrations` / `seed`). The framework's `nest-rs-*` crates live one level up
# in `../crates/` and are referenced by relative path below, so you can `cd
# demo` and drive the app as if this were its own repository.
members = [
    "apps/*",
    "crates/*",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
rust-version = "1.96"
repository = "https://github.com/YV17labs/NestRS"
homepage = "https://nestrs.dev"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }


# Errors
thiserror = "2"
anyhow = "1"

# HTTP Basic decoding for OAuth2 client authentication (`Authorization: Basic`).
# The de-facto standard base64 crate, already in the tree transitively via
# oauth2/jsonwebtoken; pulled up as a direct dep for the `basic_credentials` helper.
# NOTE: last release 0.22.1 (2024) is past the 12-month freshness bar, but the
# crate is effectively feature-complete and ubiquitous — flagged, not silent.
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"


# HTTP. The `anyhow` feature gives `poem::Error: From<anyhow::Error>` (→ 500), so a
# handler can `?` a service's `anyhow::Result` straight through — no hand-written
# error→response mapping in the app. `rustls` terminates TLS at the transport
# (`HttpTransport::tls`) with no OpenSSL system dependency, keeping the
# single-static-binary promise.
poem = { version = "3", features = ["tower-compat", "anyhow", "rustls", "compression", "multipart", "sse"] }

# Response-body plumbing for the access log: wrap poem's body stream in a byte
# counter so the access event reports the exact size sent (poem stamps
# Content-Length past the interceptor). `bytes::Bytes` is the chunk type.
bytes = "1"
# `StreamExt`/`SinkExt` for driving poem's `WebSocketStream` (a `Stream` + `Sink`)
# in the WebSocket gateway connection loop (`nest-rs-ws`).
futures-util = "0.3"

# Async traits (needed for `dyn Trait` containing async methods)
async-trait = "0.1"

# Synchronisation primitives. parking_lot's locks have no poisoning, so the
# framework's hot-path locks need no `.unwrap()`/`.expect()` (honouring the
# "no unwrap on production paths" rule) and are smaller and faster than std's.
# Already in the tree transitively (tokio/poem); pulled up as a direct dep so
# every framework crate shares one lock primitive.
parking_lot = "0.12"


# GraphQL. `dataloader` gives us async-graphql's batching loader, surfaced via
# the `#[dataloader]` decorator to kill field-resolver N+1s.
async-graphql = { version = "=7.2.1", features = ["dataloader"] }

# Input validation
validator = { version = "0.20", features = ["derive"] }

# UUIDs. `serde` so entity rows (whose ids are UUIDs) serialize for the authz
# response masker and JSON responses.
uuid = { version = "1", features = ["v7", "serde"] }

# ORM. SeaORM 2.0 — exact-pinned to match the framework's `=2.0` contract; the
# framework's `Repo`/`Executor`/`DbErr` surface (re-exported as
# `nest_rs_seaorm::sea_orm`) must resolve to the same version this app derives
# its entities against. Postgres over the rustls toolchain used across the
# workspace.
sea-orm = { version = "=2.0", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid"] }
# Migration runner + schema builder. Same exact pin as sea-orm; the bundled
# `cli` feature gives the `migrate` binary its up/down/fresh/status subcommands.
sea-orm-migration = { version = "=2.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# HTTP client (rustls so we avoid an OpenSSL system dep)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# MCP server SDK + JSON Schema derive used by tool parameters.
# schemars must match rmcp's re-exported version so the derive resolves to the
# same trait rmcp::handler::server::wrapper::Parameters expects.
rmcp = { version = "2.2", features = ["server", "macros", "transport-streamable-http-server"] }
# `uuid1` adds the `JsonSchema` impl for `uuid::Uuid` so UUID-typed DTO fields can
# be documented (and typed at the edge) rather than passed around as strings.
schemars = { version = "1", features = ["uuid1"] }

# Timestamps on entity rows and job payloads.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Dev-only. WebSocket client driving the live gateway in e2e tests.
tokio-tungstenite = "0.27"

# The product's functional core (not framework — no `nest-rs-` prefix). All
# shared business logic, contracts, policy, and the transport adapters that
# expose them — features compose a port + edge modules (HTTP, GraphQL, WS,
# Queue, MCP) that an app picks à la carte. Apps hold only `main.rs` +
# `module.rs`. Local to this workspace. See CLAUDE.md "Monorepo layout".
features = { path = "crates/features" }

# The product's database concern: the schema. A product crate like `features` —
# not framework — and the template a future `nestrs new` would emit (the app's
# repo owns its schema). Local to this workspace. See CLAUDE.md. (`seed` is a
# member run as a binary, `cargo run -p seed`; nothing depends on it as a lib.)
migrations = { path = "crates/migrations" }

# Framework crates (consumed by relative path from the parent workspace).
# Workspace keys, package names, and directory names are all `nest-rs-*` — the
# canonical kebab-case form on crates.io. Cargo's default hyphen→underscore
# mapping makes the Rust import path `nest_rs_*` (no `[lib] name` override
# exists), so app code writes `use nest_rs::prelude::*;` and proc-macros emit
# `::nest_rs_core::*`.
nest-rs-core = { version = "1.0.0", path = "../crates/nest-rs-core" }
nest-rs-authn = { version = "1.0.0", path = "../crates/nest-rs-authn" }
nest-rs-throttler = { version = "1.0.0", path = "../crates/nest-rs-throttler" }
nest-rs-config = { version = "1.0.0", path = "../crates/nest-rs-config" }
nest-rs-events = { version = "1.0.0", path = "../crates/nest-rs-events" }
nest-rs-authz = { version = "1.0.0", path = "../crates/nest-rs-authz" }
nest-rs-graphql = { version = "1.0.0", path = "../crates/nest-rs-graphql" }
nest-rs-guards = { version = "1.0.0", path = "../crates/nest-rs-guards" }
nest-rs-health = { version = "1.0.0", path = "../crates/nest-rs-health" }
nest-rs-http = { version = "1.0.0", path = "../crates/nest-rs-http" }
nest-rs-mcp = { version = "1.0.0", path = "../crates/nest-rs-mcp" }
nest-rs-interceptors = { version = "1.0.0", path = "../crates/nest-rs-interceptors" }
nest-rs-exception-filters = { version = "1.0.0", path = "../crates/nest-rs-exception-filters" }
nest-rs-openapi = { version = "1.0.0", path = "../crates/nest-rs-openapi" }
nest-rs-seaorm = { version = "1.0.0", path = "../crates/nest-rs-seaorm" }
nest-rs-pipes = { version = "1.0.0", path = "../crates/nest-rs-pipes" }
nest-rs-queue = { version = "1.0.0", path = "../crates/nest-rs-queue" }
nest-rs-redis = { version = "1.0.0", path = "../crates/nest-rs-redis" }
nest-rs-resource = { version = "1.0.0", path = "../crates/nest-rs-resource" }
nest-rs-schedule = { version = "1.0.0", path = "../crates/nest-rs-schedule" }
nest-rs-server-timing = { version = "1.0.0", path = "../crates/nest-rs-server-timing" }
nest-rs-social = { version = "1.0.0", path = "../crates/nest-rs-social" }
nest-rs-storage = { version = "1.0.0", path = "../crates/nest-rs-storage" }
nest-rs-opentelemetry = { version = "1.0.0", path = "../crates/nest-rs-opentelemetry" }
nest-rs-testing = { version = "1.0.0", path = "../crates/nest-rs-testing" }
nest-rs-worker = { version = "1.0.0", path = "../crates/nest-rs-worker" }
nest-rs-ws = { version = "1.0.0", path = "../crates/nest-rs-ws" }

# Lints opted into by the apps (via `[lints] workspace = true`). Config literals
# always close with `..Default::default()` — the house convention that keeps an
# import site forward-compatible as an options struct gains fields — so the
# `needless_update` lint (which fires when every field happens to be specified
# today) is deliberately silenced for that deliberate style.
[workspace.lints.clippy]
needless_update = "allow"

# Compiler-enforced unsafe-freedom across the demo, mirroring the root workspace.
# Every demo crate opts in via `[lints] workspace = true`, so `unsafe` is a
# compile error in its lib and test targets alike.
[workspace.lints.rust]
unsafe_code = "forbid"

# Release: smallest, fastest binary. Compile time is not a concern here.
[profile.release]
opt-level = 3       # max performance (the release default; explicit for clarity)
lto = "fat"         # whole-program optimisation: best cross-crate dead-code elimination
codegen-units = 1   # a single unit gives the optimiser the most to work with
strip = true        # drop symbols from the final binary (~18 MB -> ~15 MB)

# Dev: fastest possible iterative compile. opt-level = 0 and incremental = true
# are already the defaults; the win here is dropping full debuginfo while keeping
# file:line in backtraces, which speeds up both codegen and linking.
[profile.dev]
debug = "line-tables-only"
