[package]
name = "api"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
nestrs-core.workspace = true
nestrs-authn.workspace = true
nestrs-config.workspace = true
nestrs-authz = { workspace = true, features = ["http", "graphql"] }
nestrs-graphql.workspace = true
nestrs-health.workspace = true
nestrs-http.workspace = true
nestrs-middleware.workspace = true
nestrs-openapi.workspace = true
nestrs-database = { workspace = true, features = ["http", "graphql"] }
nestrs-resource.workspace = true
nestrs-server-timing.workspace = true
nestrs-telemetry = { workspace = true, features = ["http"] }
features.workspace = true
poem.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
schemars.workspace = true
async-graphql.workspace = true
anyhow.workspace = true
thiserror.workspace = true
validator.workspace = true
uuid.workspace = true
sea-orm.workspace = true
serde_json.workspace = true

[dev-dependencies]
poem = { workspace = true, features = ["test"] }
nestrs-testing = { workspace = true, features = ["telemetry", "orm"] }
db = { path = "../db" }

[lints]
workspace = true
